--- a/index.html
+++ b/index.html
@@ -6,24 +6,42 @@
     <title>Portfólio Gustavo Guanabara</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
     <link rel="stylesheet" href="estilos/style.css">
+    <script src="https://kit.fontawesome.com/412e60f1e0.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Formação</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Tema</a></li>
+                <li><a href="#video" class="link"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#" class="link" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <h1>Em Breve...</h1>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="Gustavo Guanabara" class="foto">
+            <h1>Gustavo Guanabara</h1>
+            <P>Formado em Ciência da Computação, com especialização em docência superior, desenvolvimento web e inteligência artificial.Apaixonado por tecnologia e sempre em busca de novos desafios. Atualmente, atuo como professor e desenvolvedor, compartilhando conhecimento através de cursos online e projetos de código aberto.</P>
+            <div id="social">
+                <a href="https://www.linkedin.com/in/guanabara/" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/gustavoguanabara" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.youtube.com/cursoemvideo" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.instagram.com/gustavoguanabara/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.cursoemvideo.com/" target="_blank" rel="nofollow"><i class="fa-solid fa-globe"></i></a>
+            </div>
+        </section>
+
+        <section id="detalhes">
+
+        </section>
     </main>
     <footer>
-
+        Portfólio desenvolvido por <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a> em 2025
     </footer>
     <script src="scripts/script.js"></script>
 </body>
