--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#video" class="link"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
                 <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#projetos" class="link"><i class="fa-solid fa-diagram-project"></i></a></li>
                 <li><a href="#" class="link" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
@@ -206,7 +206,7 @@
             </article><!-- Fim article#formação -->
 
             <article id="projetos">
-                <h2><i class="fa-solid fa-trowel-bricks"></i> Projetos</h2>
+                <h2><i class="fa-solid fa-diagram-project"></i> Projetos</h2>
                 
                     <div id="projeto-container">
                     <div class="projeto"> <!-- Projeto 01 -->
