--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 
                     <div id="projeto-container">
                     <div class="projeto"> <!-- Projeto 01 -->
-                        <a href="https://professorguanabara.github.io/projeto-de-videos/"><img src="imagens/projeto-01-videos.jpg" alt="Projeto Vídeos" class="foto"></a>
+                        <a href="https://adalberto-martins.github.io/projeto-de-videos/"><img src="imagens/projeto-01-videos.jpg" alt="Projeto Vídeos" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2022</p>
                             <h3 class="titulo">Projeto de Vídeos</h3>
@@ -223,7 +223,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 02 -->
-                        <a href="https://professorguanabara.github.io/projeto-cordel/" target="_blank"><img src="imagens/projeto-02-cordel.jpg" alt="Projeto Cordel" class="foto"></a>
+                        <a href="https://adalberto-martins.github.io/projeto-cordel/" target="_blank"><img src="imagens/projeto-02-cordel.jpg" alt="Projeto Cordel" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2023</p>
                             <h3 class="titulo">Projeto Cordel</h3>
@@ -236,7 +236,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 03 -->
-                        <a href="https://professorguanabara.github.io/projeto-android/" target="_blank"><img src="imagens/projeto-03-android.jpg" alt="Projeto Android" class="foto"></a>
+                        <a href="https://adalberto-martins.github.io/projeto-android/" target="_blank"><img src="imagens/projeto-03-android.jpg" alt="Projeto Android" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2023</p>
                             <h3 class="titulo">Projeto Android</h3>
@@ -249,7 +249,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 04 -->
-                        <a href="https://professorguanabara.github.io/projeto-social/" target="_blank"><img src="imagens/projeto-04-links.jpg" alt="Projeto Social" class="foto"></a>
+                        <a href="https://adalberto-martins.github.io/projeto-social/" target="_blank"><img src="imagens/projeto-04-links.jpg" alt="Projeto Social" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2024</p>
                             <h3 class="titulo">Projeto Redes Sociais</h3>
@@ -262,7 +262,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 05 -->
-                        <a href="https://professorguanabara.github.io/projeto-login/" target="_blank"><img src="imagens/projeto-05-login.jpg" alt="Projeto Login" class="foto"></a>
+                        <a href="https://adalberto-martins.github.io/projeto-login/" target="_blank"><img src="imagens/projeto-05-login.jpg" alt="Projeto Login" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2024</p>
                             <h3 class="titulo">Projeto Login</h3>
@@ -275,7 +275,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 06 -->
-                        <a href="https://professorguanabara.github.io/projeto-album-de-fotos/" target="_blank">
+                        <a href="https://adalberto-martins.github.io/projeto-album-de-fotos/" target="_blank">
                             <img src="imagens/projeto-06-album.jpg" alt="Projeto Album Flex" class="foto">
                         </a>
                         <div class="projeto-info">
