--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 
                     <div id="projeto-container">
                     <div class="projeto"> <!-- Projeto 01 -->
-                        <a href="https://adalberto-martins.github.io/projeto-de-videos/"><img src="imagens/projeto-01-videos.jpg" alt="Projeto Vídeos" class="foto"></a>
+                        <a href="https://adalberto-martins.github.io/projeto-videos/" target="_blank"><img src="imagens/projeto-01-videos.jpg" alt="Projeto Vídeos" class="foto"></a>
                         <div class="projeto-info">
                             <p class="periodo">2022</p>
                             <h3 class="titulo">Projeto de Vídeos</h3>
