--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="https://github.com/gustavoguanabara" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.youtube.com/cursoemvideo" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
                 <a href="https://www.instagram.com/gustavoguanabara/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.cursoemvideo.com/" target="_blank" rel="nofollow"><i class="fa-solid fa-globe"></i></a>
+                <a href="https://www.curs" target="_blank" rel="nofollow"><i class="fa-solid fa-globe"></i></a>
             </div>
         </section>
 
